--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             text = text.replace(/<\/?[^>]+(>|$)/g, "");
             
             // Remove double line breaks
-            text = text.replace(/\n\s*\n\s*\n/g, '\n\n');
+            text = text.replace(/\n\s*\n/g, '\n');
             
             // Update output
             plainText.value = text;
